Added selected function def to popupmenu.
Added show functions def in popupmenu.
Fixed defines that contain : or / not displaying.
Added version number to tarball.
Strpped whitespace from bookmark label;
Go To Definition not shown in popup if not available.
Selecting function def in popup copies def to clipboard.
Added new icon.
Code clean.
Set recursive search for tags (default = 1).
Added Search For Define to Navigation menu.

0.0.12
Do simple conversion to/from UTF-8.
Added "Open As Hexdump" to file menu.
Added number to untitled docs.
Made application single instance.
Major Code clean.
Added select single/multi instance to prefs.
Prefs applied immediately  ( again! ).

0.0.13
Added crude function lookup in gtk-doc folder - to be improved.
Added optional webkit dependency if building doc viewer.
Added gkt-doc viewer in own window via webkit.
Added switch to configure for optional gkt-doc viewer.
Added 'Save All'
Added 'Help' now shown local if doc viewer has been built.
Redone demo installed external tools.
Fixed autogen.sh only passing first option on command line.

0.0.14
Removed redundant close button from toolbar.
Added printing.
Improved Gtk Doc search.
Code clean.
Only recursivly search for define from main menu not pop-up ( for speed ).
Added manual search box to gtk-doc viewer.
Added auto save/restore session to prefs (default off).
Tweaked help page.
Added manual gtk doc search to toolbar

0.0.15
Save/restore bookmarks with session, if the files change on disk after saving session, restoring will skew bookmarks.
Added "Close All Tabs" to file menu.
Close all tabs BEFORE restoring session.
Dimmed Nav, func and bookmark menus when no docs open.
Dimmed saveall, close etc when no docs open.
Session can now be restored with/without the saved bookmarks.
Auto restore bookmarks can be set in prefs
Added error dialog if can't save.
External tools now editable from the GUI.
For convienience info label in tools gui is selectable.
Added 'delete' to tools GUI.