@@ -1,0 +1,4 @@
+name	Open Man Page
+command	%i/tools/OpenManPage
+flags	4
+interm	0
