@@ -18,6 +18,7 @@
 #ifdef BUILDDOCVIEWER
 void webKitGoBack(GtkWidget* widget,gpointer data);
 void webKitGoForward(GtkWidget* widget,gpointer data);
+void webKitGoHome(GtkWidget* widget,gpointer data);
 #endif
 void showDocView(GtkWidget* widget,gpointer data);
 void doFindReplace(GtkDialog *dialog,gint response_id,gpointer user_data);
